mon premier commit

--- a/login.html
+++ b/login.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css"/>
-    <link HREF="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="fontawesome-free-6.3.0-web/fontawesome/css/all.css">
     <meta charset ='utf_8'>
 </head>
-<body style="background-image: url(image/photo.jpg); background-size: 1300px; height: 50px;"> 
+<body> 
     <div class="container">
        <div class="content">
          <div class="title">
             TRIPLE FORMS
             </div>
-         <div class="carte">
-            <div class="item cart-img">
-                  <img src="image/dp.jpg" width="301px" height="400">
+         <div class="row carte">
+            <div class="col-md-3 item cart-img">
+                  <!-- <img src="" class="images"> -->
             </div>
-            <div class="item cart-link">
+            <div class="col-md-3 item cart-link">
                 <div class="link">
                     <span><i class="fas fa-duotone fa-circle-user"></i></span>
                     <a class="active" href="#">Login</a>
@@ -30,7 +31,7 @@
                     <a href="#">Forget Password</a>
                 </div>
             </div>
-            <div class="item cart-form">
+            <div class="col-md-6 item cart-form">
                 <div class="form-title">
                     Login Here
                 </div>
